engine custom candidate groups address improve null check